--- a/simple-pwa/index.html
+++ b/simple-pwa/index.html
@@ -13,8 +13,8 @@
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker
-                  .register('./sw.js' ,{ scope: '/' })
-                  .then((reg) => console.log('サービスワーカーの登録成功', reg.scope))
+                  .register('./sw.js')
+                  .then((reg) => console.log('サービスワーカーの登録成功です！！', reg.scope))
                   .catch((err) => console.log('サービスワーカーの登録失敗', err));
         });
       }
