--- a/simple-pwa/index.html
+++ b/simple-pwa/index.html
@@ -9,15 +9,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker
-                  .register('./sw.js')
-                  .then((reg) => console.log('サービスワーカーの登録成功です！！', reg.scope))
-                  .catch((err) => console.log('サービスワーカーの登録失敗', err));
-        });
-      }
-    </script>
+<!--    <script>-->
+<!--      if ('serviceWorker' in navigator) {-->
+<!--        window.addEventListener('load', () => {-->
+<!--          navigator.serviceWorker-->
+<!--                  .register('./sw.js')-->
+<!--                  .then((reg) => console.log('サービスワーカーの登録成功です！！', reg.scope))-->
+<!--                  .catch((err) => console.log('サービスワーカーの登録失敗', err));-->
+<!--        });-->
+<!--      }-->
+<!--    </script>-->
   </body>
 </html>
